Added cors() work around. Added socket.io. Can now fetch from external source and return from endpoint

--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "node-fetch": "^1.7.3",
+    "socket.io": "^2.0.4",
+    "xml-js": "^1.6.2"
   },
   "devDependencies": {
     "nodemon": "^1.14.9"
